# PS5-Game-Scraper

./: BUILD.md  CHANGELOG.md  CHANGELOG_PS5.md  README.md  README_PS5.md  index.html  main.js  package.json  renderer.js  run_scraper_and_upload.bat  scraper_ps5.py  upload_to_r2.bat  upload_to_r2.py
.github/workflows/: build.yml
Downloads/DLPSGAME/: package-lock.json  package.json  preload.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
ui/: index.html
